@@ -16,48 +16,43 @@ using namespace giada::m;
 
 TEST_CASE("waveManager")
 {
-  /* Each SECTION the TEST_CASE is executed from the start. Any code between 
-  this comment and the first SECTION macro is exectuted before each SECTION. */
+	/* Each SECTION the TEST_CASE is executed from the start. Any code between 
+	this comment and the first SECTION macro is exectuted before each SECTION. */
 
-  Wave* w;
+	SECTION("test creation")
+	{
+		waveManager::Result res = waveManager::createFromFile("tests/resources/test.wav");
 
-  SECTION("test creation")
-  {
-    int res = waveManager::create("tests/resources/test.wav", &w);
-    std::unique_ptr<Wave> wave(w);
-    
-    REQUIRE(res == G_RES_OK);
-    REQUIRE(wave->getRate() == G_SAMPLE_RATE);
-    REQUIRE(wave->getChannels() == G_CHANNELS);
-    REQUIRE(wave->isLogical() == false);
-    REQUIRE(wave->isEdited() == false);
-  }
+		REQUIRE(res.status == G_RES_OK);
+		REQUIRE(res.wave->getRate() == G_SAMPLE_RATE);
+		REQUIRE(res.wave->getChannels() == G_CHANNELS);
+		REQUIRE(res.wave->isLogical() == false);
+		REQUIRE(res.wave->isEdited() == false);
+	}
 
-  SECTION("test recording")
-  {
-    waveManager::createEmpty(G_BUFFER_SIZE, G_MAX_IO_CHANS, G_SAMPLE_RATE, 
-      "test.wav", &w);
-    std::unique_ptr<Wave> wave(w);
+	SECTION("test recording")
+	{
+		std::unique_ptr<Wave> wave = waveManager::createEmpty(G_BUFFER_SIZE, 
+			G_MAX_IO_CHANS, G_SAMPLE_RATE, "test.wav");
 
-    REQUIRE(wave->getRate() == G_SAMPLE_RATE);
-    REQUIRE(wave->getSize() == G_BUFFER_SIZE);
-    REQUIRE(wave->getChannels() == G_CHANNELS);
-    REQUIRE(wave->isLogical() == true);
-    REQUIRE(wave->isEdited() == false);
-  }
+		REQUIRE(wave->getRate() == G_SAMPLE_RATE);
+		REQUIRE(wave->getSize() == G_BUFFER_SIZE);
+		REQUIRE(wave->getChannels() == G_CHANNELS);
+		REQUIRE(wave->isLogical() == true);
+		REQUIRE(wave->isEdited() == false);
+	}
 
-  SECTION("test resampling")
-  {
-    waveManager::create("tests/resources/test.wav", &w);
-    std::unique_ptr<Wave> wave(w);
+	SECTION("test resampling")
+	{
+		waveManager::Result res = waveManager::createFromFile("tests/resources/test.wav");
 
-    int oldSize = wave->getSize();
-    waveManager::resample(wave.get(), 1, G_SAMPLE_RATE * 2);
-    
-    REQUIRE(wave->getRate() == G_SAMPLE_RATE * 2);
-    REQUIRE(wave->getSize() == oldSize * 2);
-    REQUIRE(wave->getChannels() == G_CHANNELS);
-    REQUIRE(wave->isLogical() == false);
-    REQUIRE(wave->isEdited() == false);
-  }
+		int oldSize = res.wave->getSize();
+		waveManager::resample(res.wave.get(), 1, G_SAMPLE_RATE * 2);
+		
+		REQUIRE(res.wave->getRate() == G_SAMPLE_RATE * 2);
+		REQUIRE(res.wave->getSize() == oldSize * 2);
+		REQUIRE(res.wave->getChannels() == G_CHANNELS);
+		REQUIRE(res.wave->isLogical() == false);
+		REQUIRE(res.wave->isEdited() == false);
+	}
 }
