@@ -15,6 +15,7 @@
 0.15.4 ---
 - Initial support for plug-ins with mono I/O buses
 - PluginHost refactoring
+- Fix memory leak when replacing samples in a Sample Channel
 
 
 0.15.3 --- 2018 . 12 . 24
